interfaces de usuario (no funciona la de crear) (#138)
me la he autoaceptado porque mi compañero está durmiendo y quiero avanzar
